cmake_minimum_required(VERSION 3.21)
project(cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp main.cpp new关键字.cpp "cmake-build-debug/引用/2.1 引用的使用.cpp" "cmake-build-debug/引用/2.2 引用的注意事项.cpp" "cmake-build-debug/引用/2.3 引用做函数参数.cpp" cmake-build-debug/引用/2.4引用做函数返回值.cpp "cmake-build-debug/引用/2.5 引用的本质.cpp" "cmake-build-debug/引用/2.6 常量引用.cpp" "函数提高/3.1 函数默认参数.cpp" "函数提高/3.2 函数占位参数.cpp" "函数提高/3.1.1 函数重栽概述.cpp" "函数提高/3.3.2 函数重载注意事项.cpp" "类和对象/4.1 封装的意义.cpp" "类和对象/4.1.1 封装的意义.cpp" "类和对象/4.1.2 struct 和 class区别.cpp" "类和对象/4.1.3 成员属性设置为私有.cpp" "类和对象/4.2.1  构造函数.cpp" "类和对象/4.2.2 构造函数的分类及调用.cpp" "类和对象/4.2.3 拷贝构造函数调用时机.cpp" "类和对象/4.2.4 构造函数调用规则.cpp" "类和对象/4.2.5  深拷贝和浅拷贝.cpp" "类和对象/4.2.6 初始化列表.cpp" "类和对象/4.2.7  类对象作为类成员.cpp" "类和对象/4.2.8  静态成员.cpp" "类和对象/4.3.1  成员变量和成员函数分开存储.cpp" "类和对象/4.3.2 this指针的使用.cpp" "类和对象/4.3.3 空指针访问成员函数.cpp" "类和对象/4.3.4 const修饰成员函数.cpp" "类和对象/4.4.1  全局函数做友元.cpp" "类和对象/4.4.2  类做友元.cpp")
